--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=library_managament
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/library_managament?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Kartik$@&123
+spring.datasource.password=*********
 
 # JPA and hibernate settings
 # JPA / Hibernate Settings
